<resources>
    <string name="app_name">Lab8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ascendente"><![CDATA[A -> Z]]></string>
    <string name="descendente"><![CDATA[Z -> A]]></string>
    <string name="nombre">nombre</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="origen">Origen:</string>
    <string name="episodios">Episodios:</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="correouvg">mor21785@uvg.edu.gt</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="ordenarASC"><![CDATA[A -> Z]]></string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ordenarDESC"><![CDATA[Z -> A]]></string>
    <string name="actualizar">actualizar</string>
    <string name="name">Name</string>
    <string name="guardar">Guardar</string>
</resources>