<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CharakterDetailFragment">

    <ImageView
        android:id="@+id/imagenCharacterDetails"
        android:layout_width="@dimen/tamanoimagen"
        android:layout_height="@dimen/tamanoimagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>
    <TextView
        android:id="@+id/nombreCharacterDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenCharacterDetails"

        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margintop"/>
    <TextView
        android:id="@+id/textSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreCharacterDetails"
        android:layout_marginStart="@dimen/margendetails"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/speciestext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreCharacterDetails"
        android:layout_marginEnd="@dimen/margendetails"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSpecies"
        android:layout_marginStart="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>

    <TextView
        android:id="@+id/statustext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSpecies"
        android:layout_marginEnd="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>

    <TextView
        android:id="@+id/textGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStatus"
        android:layout_marginStart="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>

    <TextView
        android:id="@+id/gendertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStatus"
        android:layout_marginEnd="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>
    <TextView
        android:id="@+id/origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origen"
        app:layout_constraintTop_toBottomOf="@id/textGender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>
    <TextView
        android:id="@+id/textorigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textGender"

        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>
    <TextView
        android:id="@+id/episodios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episodios"
        app:layout_constraintTop_toBottomOf="@id/origen"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>
    <TextView
        android:id="@+id/textepisodios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textorigen"
        android:layout_marginEnd="@dimen/margendetails"
        android:layout_marginTop="@dimen/margintop"/>


</androidx.constraintlayout.widget.ConstraintLayout>